syntax = "proto3";

package todo_grpc_test;

service MyService {
  rpc MyMethod(MyRequest) returns (MyResponse) {}
}

message MyRequest {
  string name = 1;
}

message MyResponse {
  string message = 1;
}
